--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "yajra/laravel-datatables": "1.0"
+        "yajra/laravel-datatables-buttons": "3.*",
+        "yajra/laravel-datatables-fractal": "1.*",
+        "yajra/laravel-datatables-html": "3.*",
+        "yajra/laravel-datatables-oracle": "8.*"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
